# rsping

./: Cargo.toml  README.md
src/: main.rs  valifunc.rs
