[package]
name = "rsping"
version = "0.1.0"
authors = ["trojanking123 <wuqianking123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "~2.27.0", features = ["yaml"]}
regex = {version = "~1.3.0"}